@@ -42,14 +42,19 @@ output.matrix.file = $(DATA).mat
 # For proteins, the DCmutt method is used for JTT92 and DSO78.
 # You can use the 'empirical' option to specify another model.
 # JCnuc, K80, T92, HKY85, F84, TN93, JCprot, DSO78, JTT92 or empirical
-model = HKY85
+# Append +G2001 or +TS98 to the model name to add a covarion model.
+model.name = HKY85
 
 # Initial values for parameters:
-#kappa (K80, T92, HKY85, F84)
-#kappa1, kappa2 (TN93)
-#theta (T92)
-#pi1, piT, piC and piG (HKY85, F84 and TN93)
-kappa = 2.843
+# kappa (K80, T92, HKY85, F84)
+# kappa1, kappa2 (TN93)
+# theta (T92)
+# pi1, piT, piC and piG (HKY85, F84 and TN93)
+model.kappa = 2.843
+model.piA = 0.13
+model.piT = 0.16
+model.piC = 0.31
+model.piG = 0.40
 
 #Tell if we have to use observed frequencies as parameter values (for piA, piT, piG, piC and theta).
 #For proteins, this is equivalent to the -F model family.
@@ -59,22 +64,27 @@ model.use_observed_freq = yes
 model_empirical.file = 
 
 # Rate Across Sites variation:
-# gamma or constant
+# gamma or constant [+invariant]
 rate_distribution = gamma
 
 # The gamma distribution's shape parameter
-rate_distribution_gamma.alpha = 0.358
+rate_distribution.alpha = 0.358
 
 # Number of classes for discretization:
 rate_distribution.classes_number = 4
 
-# -none
-# -G2001 for Galtier 2001 model
-# -TS1998 for Tuffley and Steel 1998 model
-covarion=none
-covarion_G2001.nu=1.
-covarion_TS98.s1=1.
-covarion_TS98.s2=1.
+# The proportion of invariants
+rate_distribution.p = 0.2
+
+#Covarions:
+#G2001:
+model.nu=1.
+model.rate_distribution=gamma //only choice for now
+model.rate_distribution.classes_number = 4
+model.alpha = 0.358
+#TS98:
+model.s1=1.
+model.s2=1.
 
 # Tree reconstruction method [wpgma|upgma|nj|bionj]
 method = $(METHOD)
@@ -84,7 +94,7 @@ method = $(METHOD)
 // - iterations = use iterations and ML to estimate these parameters globally.
 optimization.method = init
 optimization.verbose = 1
-optimization.ignore_parameter = piA,piC,piG,piT
+optimization.ignore_parameter =
 optimization.max_number_f_eval = 10000
 optimization.tolerance = 0.000001
 optimization.message_handler = $(DATA).messages
