@@ -1,1 +1,1 @@
-((((((((Leptospira:0.233149,((((Thermus:0.20308,(Thermotoga:0.135557,Aquifex:0.299288):0.0527439):0.0935177,Synechocystis:0.300806):0.0240249,((((Mycobacterium@smegma:0.0207015,(Mycobacterium:0.0114334,Mycobacterium@leprae:0.0236113):0.0227881):0.0582151,Rhodococcus@erythrop:0.0320858):0.0338919,(Frankia@sp:0.0370614,(((Thermomonospora:0.0462579,Microbispora:0.0579444):0.0179617,Thermomonospora@chro:0.0272185):0.0563348,((Streptomyces@coelico:0.0119673,Streptomyces@griseus:0.0110784):0.00980695,Streptomyces@rimosus:0.0109277):0.0531062):0.0136466):0.0316868):0.00159211,((Micrococcus:0.0716746,Renibacterium:0.0385377):0.0225196,Tropheryma:0.103887):0.0240877):0.163224):0.020678,((((((((Bacillus@licheniform:0.00841723,Bacillus@stearotherm:0.0782409):0.0200252,Listeria@monocytogen:0.049857):0.00903459,Bacillus@globisporus:0.0450167):0.0138481,Staphylococcus@pisci:0.0665028):0.0163372,(Enterococcus:0.0281456,((Lactobacillus:0.0939479,Leuconostoc@lactis:0.0846794):0.0298635,(Lactococcus:0.0643252,Streptococcus:0.0434056):0.0417913):0.0134241):0.033359):0.0528694,Erysipelothrix@rhusi:0.157671):0.020747,Peptococcus:0.209911):0.0138268,Clostridium@botulinu:0.172963):0.0503395):0.0140592):0.0162283,((((((((Burkholderia@mallei:0.0235648,Ralstonia@solanacear:0.0268871):0.0287094,(Alcaligenes:0.0465863,Bordetella@bronchise:0.0344355):0.023933):0.0344058,Neisseria@meningitid:0.0769752):0.0548428,((Leucothrix:0.111751,Xylella:0.0959934):0.0133162,((((Ruminobacter:0.170501,Aeromonas@hydrophila:0.0300618):0.0148244,(Vibrio@cholerae:0.0616437,((((Escherichia@coli:0.00511637,(Klebsiella:0.00600407,Citrobacter:0.0137957):0.00787052):0.00500156,Salmonella@bongori:0.0141893):0.0190316,Buchnera@aphidicola:0.0947634):0.0174168,Haemophilus:0.0911221):0.0337931):0.0126165):0.0476494,Acinetobacter:0.0837274):0.0174517,Pseudomonas@stutzeri:0.057407):0.0260415):0.0122102):0.0138697,Thiobacillus:0.102546):0.0642624,(((Rickettsia:0.147968,(((Rhodopseudomonas@pal:0.00940968,Bradyrhizobium:0.0238777):0.0853425,((Zoogloea:0.0282721,Agrobacterium@vitis:0.0237669):0.0223903,(Brucella:0.0196664,Bartonella:0.0430564):0.0211836):0.0338063):0.0193146,Brevundimonas:0.137031):0.0164272):0.0103107,(Rhodospirillum:0.0718494,((Paracoccus:0.0509502,Rhodobacter:0.04199):0.00965931,Rhodobacter@sphaeroi:0.0340006):0.0936462):0.022792):0.0195981,Zymomonas:0.150463):0.0864811):0.04199,(Stigmatella:0.171939,Nannocystis:0.158427):0.0359981):0.0420444,((Helicobacter@pilori:0.0745117,Wolinella:0.0422468):0.0690563,Campylobacter@jejuni:0.0985459):0.150308):0.0285993):0.00419847,(Treponema:0.182245,Borrelia:0.157326):0.13224):0.0166062,(Mycoplasma@hyopneumo:0.257512,Ureaplasma:0.259645):0.109281):0.0260054,Pirellula:0.296554):0.1737,Waddlia:0.0698857):0.0143006,(Chlamydia@sp:0.0449997,Simkania:0.0891303):0.0195905):0.0837095,Chlamydophila@felis:0.0332235,Chlamydia@muridarum:0.0209703);
+((((((((Leptospira:0.211857,((((Thermus:0.146936,(Thermotoga:0.107931,Aquifex:0.260721):0.0337762):0.0847738,Synechocystis:0.238263):0.0184171,((((Mycobacterium@smegma:0.0152015,(Mycobacterium:0.00677954,Mycobacterium@leprae:0.0189232):0.0143038):0.0519384,Rhodococcus@erythrop:0.0241529):0.0377471,(Frankia@sp:0.0326741,(((Thermomonospora:0.0376728,Microbispora:0.0431383):0.0171155,Thermomonospora@chro:0.0276944):0.0409298,((Streptomyces@coelico:0.012891,Streptomyces@griseus:0.0125734):0.00768632,Streptomyces@rimosus:0.0118849):0.0466048):0.00997886):0.0239115):0.000373145,((Micrococcus:0.0609534,Renibacterium:0.0251235):0.0215017,Tropheryma:0.0967747):0.0168714):0.121323):0.0211992,((((((((Bacillus@licheniform:0.00347702,Bacillus@stearotherm:0.0611505):0.0157103,Listeria@monocytogen:0.0389548):0.00972441,Bacillus@globisporus:0.0338981):0.0139857,Staphylococcus@pisci:0.0512119):0.0131618,(Enterococcus:0.0156791,((Lactobacillus:0.0711563,Leuconostoc@lactis:0.0664503):0.0255861,(Lactococcus:0.0633394,Streptococcus:0.026513):0.0378023):0.0136943):0.0239073):0.0392089,Erysipelothrix@rhusi:0.116809):0.0189999,Peptococcus:0.162782):0.0129891,Clostridium@botulinu:0.146896):0.0409783):0.0148788):0.0190659,((((((((Burkholderia@mallei:0.0155984,Ralstonia@solanacear:0.0236959):0.0181518,(Alcaligenes:0.0398318,Bordetella@bronchise:0.0255562):0.021133):0.0286949,Neisseria@meningitid:0.0681373):0.0483249,((Leucothrix:0.0878135,Xylella:0.0788572):0.00758399,((((Ruminobacter:0.124861,Aeromonas@hydrophila:0.0264272):0.0176731,(Vibrio@cholerae:0.0463728,((((Escherichia@coli:0.0041224,(Klebsiella:0.00405158,Citrobacter:0.00636193):0.00398771):0.00390397,Salmonella@bongori:0.0128143):0.0142482,Buchnera@aphidicola:0.073711):0.0146922,Haemophilus:0.0712366):0.0215992):0.00983827):0.0423124,Acinetobacter:0.077717):0.0167588,Pseudomonas@stutzeri:0.046158):0.0192256):0.0131933):0.0129048,Thiobacillus:0.0996059):0.0467108,(((Rickettsia:0.122587,(((Rhodopseudomonas@pal:0.0117125,Bradyrhizobium:0.0178525):0.0746991,((Zoogloea:0.018863,Agrobacterium@vitis:0.0192032):0.0222354,(Brucella:0.0169999,Bartonella:0.0275871):0.0176813):0.0257604):0.0160184,Brevundimonas:0.112224):0.00968614):0.00878232,(Rhodospirillum:0.0582425,((Paracoccus:0.0252502,Rhodobacter:0.0348436):0.0105068,Rhodobacter@sphaeroi:0.0259512):0.0760798):0.0177725):0.0169304,Zymomonas:0.125582):0.068287):0.043152,(Stigmatella:0.150748,Nannocystis:0.146526):0.0377841):0.0317373,((Helicobacter@pilori:0.0638338,Wolinella:0.0304204):0.0561446,Campylobacter@jejuni:0.0864261):0.128797):0.0266729):0.00685327,(Treponema:0.167452,Borrelia:0.108701):0.116383):0.0207078,(Mycoplasma@hyopneumo:0.216042,Ureaplasma:0.234444):0.0737392):0.0230123,Pirellula:0.258376):0.149483,Waddlia:0.047224):0.00888048,(Chlamydia@sp:0.0362833,Simkania:0.0716742):0.0186897):0.0722677,Chlamydophila@felis:0.0255132,Chlamydia@muridarum:0.0182393);
