@@ -1,0 +1,51 @@
+# Global variables:
+DATA = LSU
+
+# Sequences:
+
+# The alphabet to use:
+# DNA, RNA or Protein
+alphabet=DNA
+
+# The sequence file to use (sequences must be aligned!)
+sequence.file=$(DATA).phy
+
+# The alignment format:
+# Must be one of Mase, Fasta, Phylip, Clustal, DCSE or GenBank 
+sequence.format=Phylip
+
+# Mase format option:
+sequence.format_mase.site_selection =
+
+# Phylip format options:
+# interleaved or sequential:
+sequence.format_phylip.order = sequential
+
+# classic or extended (PAML):
+sequence.format_phylip.ext = extended
+
+# Input method: tree or matrix
+input.method=tree
+
+# Tree file if the tree method has been selected:
+tree.file=$(DATA).dnd
+
+# Matrix file if the matrix method has been selected:
+input.matrix=
+
+# Criterion to choose between sequences:
+# - length: keep the sequence with the highest number of positions
+# - length.complete: keep the sequence with the highest number of complete positions
+# - random: Keep a sequence randomly
+choice_criterion=length.complete
+
+# Threshold to use (same unit as distances on the tree/matrix)
+THRESHOLD=05
+threshold=0.$(THRESHOLD)
+
+# Output sequence file
+output.sequence.file=$(DATA).$(THRESHOLD).fasta
+
+# Ouput format:
+output.sequence.format=Fasta
+
