@@ -45,7 +45,7 @@ nonhomogneous_one_per_branch.shared_parameters = kappa
 
 
 # Rate Across Sites variation (not for use with covarion models)
-# gamma or constant
+# gamma or constant [+invariant]
 rate_distribution = gamma
 
 # The gamma distribution's shape parameter
@@ -53,4 +53,7 @@ rate_distribution.alpha = 0.358
 
 # Number of classes for discretization:
 rate_distribution.classes_number = 4
+
+# The proportion of invariants
+rate_distribution.p = 0.2
 
