@@ -28,9 +28,14 @@ SEQMAN_H_FILES =
 SEQMAN_CPP_FILES = \
 bppSeqMan.cpp
 
+PHYSAMP_H_FILES = 
+
+PHYSAMP_CPP_FILES = \
+bppPhyloSampler.cpp
+
 AUTOMAKE_OPTIONS = gnu
 
-bin_PROGRAMS = bppml bpppars bppdist bppseqgen bppconsense bppseqman
+bin_PROGRAMS = bppml bpppars bppdist bppseqgen bppconsense bppseqman bppphysamp
 if STATIC
 bppml_LDFLAGS = -static
 bpppars_LDFLAGS = -static
@@ -38,6 +43,7 @@ bppdist_LDFLAGS = -static
 bppseqgen_LDFLAGS = -static
 bppconsense_LDFLAGS = -static
 bppseqman_LDFLAGS = -static
+bppphysamp_LDFLAGS = -static
 else
 bppml_LDFLAGS = 
 bpppars_LDFLAGS = 
@@ -45,6 +51,7 @@ bppdist_LDFLAGS =
 bppseqgen_LDFLAGS =
 bppconsense_LDFLAGS =
 bppseqman_LDFLAGS =
+bppphysamp_LDFLAGS =
 endif
 bppml_LDADD = -lbpp-utils -lbpp-numcalc -lbpp-seq -lbpp-phyl
 bppml_SOURCES = $(ML_H_FILES) $(ML_CPP_FILES)
@@ -58,4 +65,6 @@ bppconsense_LDADD = -lbpp-utils -lbpp-numcalc -lbpp-seq -lbpp-phyl
 bppconsense_SOURCES = $(CONSENSE_H_FILES) $(CONSENSE_CPP_FILES)
 bppseqman_LDADD = -lbpp-utils -lbpp-numcalc -lbpp-seq
 bppseqman_SOURCES = $(SEQMAN_H_FILES) $(SEQMAN_CPP_FILES)
+bppphysamp_LDADD = -lbpp-utils -lbpp-numcalc -lbpp-seq -lbpp-phyl
+bppphysamp_SOURCES = $(PHYSAMP_H_FILES) $(PHYSAMP_CPP_FILES)
 
