@@ -1,3 +1,6 @@
+31/12/07 Julien Dutheil
+* New program Phylo Sampler.
+
 07/11/07 Julien Dutheil
 * Compatibility update with Bio++ cvs.
 * Bug fixed in BppSeqGen.
